syntax = "proto3";

import "google/protobuf/empty.proto";

package go.micro.service.users;

service Users {
	rpc GetPaginatedUsers(RequestPageOptions) returns (ResponsePage) {}
	rpc GetPaginatedWithQP(RequestPageOptions) returns (ResponsePageWQP) {}
	rpc GetUsers(google.protobuf.Empty) returns (ResponseUsersArray) {}
	rpc GetUserByID(RequestUserID) returns (ResponseUser) {}
	rpc GetUserByEmail(RequestUserEmail) returns (ResponseUser) {}
	rpc LogIn(RequestUserLogIn) returns (ResponseUser) {}
	rpc CreateUser(RequestCreateUser) returns (ResponseUser) {}
	rpc UpdateUser(RequestUpdateUser) returns (ResponseUser) {}
	rpc DeleteUser(RequestUserID) returns (ResponseUser) {}
}

message Message {
	string say = 1;
}

message RequestUserLogIn {
	string email = 1;
	string password = 2;
}

message RequestUserID {
	string id = 1;
}

message RequestUserEmail {
	string email = 1;
}

message ResponseUsersArray {
    repeated ResponseUser users = 1;
}

message RequestPageOptions {
	message Filter {
		string field = 1;
		string value = 2;
	}

	int64 pageNumber = 1;
	int64 registersNumber = 2;
	Filter orderBy = 3;
	repeated Filter filters = 4;
}

message ResponsePage {
	int64 length = 1;
	int64 pageNumber = 2;
	int64 numberOfPages = 3;
	repeated ResponseUser data = 4;
}

message ResponsePageWQP {
	int64 length = 1;
	int64 pageNumber = 2;
	int64 numberOfPages = 3;
	repeated ResponseUserQP data = 4;
}


message ResponseUser {
	string id = 1;
	string firstName = 2;
	string lastName = 3;
	string documentNumber = 4;
	string email = 5;
	string phoneNumber = 6;
	string GDEUser = 7;
	string position = 8;

	int64 createdAt = 9;
	int64 modifiedAt = 10;
	int64 deletedAt = 11;
}

message ResponseUserQP {
	string id = 1;
	string firstName = 2;
	string lastName = 3;
	string documentNumber = 4;
	string email = 5;
	string phoneNumber = 6;
	string GDEUser = 7;
	string position = 8;

	repeated ResponseQueryPoint querypoints = 10;

	int64 createdAt = 11;
	int64 modifiedAt = 12;
	int64 deletedAt = 13;
}

message RequestCreateUser {
	string firstName = 1;
	string lastName = 2;
	string documentNumber = 3;
	string password = 4;
	string repassword = 5;
	string email = 6;
	string phoneNumber = 7;
	string GDEUser = 8;
	string position = 9;
}

message RequestUpdateUser {
	string id = 1;
	string firstName = 2;
	string lastName = 3;
	string documentNumber = 4;
	string password = 5;
	string email = 6;
	string phoneNumber = 7;
	string GDEUser = 8;
	string position = 9;
}



/////////////////QP///////////////////

message ResponseQueryPoint {
	string id = 1;
	string name = 2;
	string phone = 3;
	string address = 4;
	string district = 5;
	string department = 6;
	repeated string actions = 7;

	int64 createdAt = 8;
	int64 modifiedAt = 9;
	int64 deletedAt = 10;
}
